Latest changes after meeting with client

--- a/boilerplate/include/footer.html
+++ b/boilerplate/include/footer.html
@@ -6,6 +6,13 @@
       <!--<img src="img/attainx-logo.jpg" alt="Attanix Logo"/>-->
 
       <address class="margin-bottom-30px">
+        <h3 class="footer-heading">OFFICES</h3>
+        <ul class="list-unstyled">
+          <li>3949 Pender Drive, Suite 215
+            <br> Fairfax, VA 22030</li>
+          <li>Phone: (202) 400 - 2259</li>
+          <li>Email: <a href="mailto:info@attainx.com">info@attainx.com</a></li>
+        </ul>
         <ul class="list-unstyled">
           <li>725 Church Street, Suite 505
             <br> Lynchburg, VA 24504</li>
@@ -17,7 +24,7 @@
     </div>
     <div class="col-md-4">
       <!-- COLUMN 2 -->
-      <h3 class="footer-heading">USEFUL LINKS</h3>
+      <h3 class="footer-heading"></h3>
       <div class="row margin-bottom-30px">
         <div class="col-xs-6">
           <ul class="list-unstyled footer-nav">
