--- a/boilerplate/include/rightColumn.html
+++ b/boilerplate/include/rightColumn.html
@@ -1,7 +1,12 @@
 <div class="widget">
     <h3 class="widget-title">CONTACT INFO</h3>
     <ul class="contact-info fa-ul">
-        <li><i class="fa fa-li fa-building-o"></i>725 Church Street, Suite 505 Lynchburg, VA 24504 USA</li>
+        <li><i class="fa fa-li fa-building-o"></i>3949 Pender Drive, Suite 215 <br>Fairfax, VA 22030 USA</li>
+        <li>Main line: (202) 400-2259</li>
+        <li><i class="fa fa-li fa-envelope-o"></i> <a href="mailto:info@attainx.com">info@attainx.com</a></li>
+    </ul>
+    <ul class="contact-info fa-ul">
+        <li><i class="fa fa-li fa-building-o"></i>725 Church Street, Suite 505 <br>Lynchburg, VA 24504 USA</li>
         <li>Main line: (202) 400-2259</li>
         <li>Fax: (703) 890-2357</li>
         <li><i class="fa fa-li fa-envelope-o"></i> <a href="mailto:info@attainx.com">info@attainx.com</a></li>
