--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -7213,12 +7213,12 @@ ul.clients-block li {
     list-style: none;
     float: left;
     min-width: 180px;
-    min-height: 110px;
+    min-height: 100px;
     margin: 20px 40px 15px 0;
     vertical-align: bottom;
     text-align: center;
     background-color: #fff;
-    padding: 10px;
+    padding: 4px;
     border-radius: 5px;
     box-shadow: 0 0 8px 0px #ccc;
 }
@@ -7280,7 +7280,7 @@ ul.clients-block li {
 
 .ticker-container {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  height: 60px;
+  height: 50px;
   width: 100%;
   text-align: center;
   position: relative;
@@ -7324,7 +7324,7 @@ ul.clients-block li {
   transition: 0.25s ease-in-out;
 }
 .ticker-container ul div.ticker-active {
-  top: 30px;
+  top: 50px;
 }
 .ticker-container ul div.not-active {
   top: 60px;
@@ -7344,7 +7344,7 @@ ul.clients-block li {
 
 @media (min-width: 500px) {
   .ticker-container {
-    height: 30px;
+    height: 50px;
     text-align: left;
   }
   .ticker-container .ticker-caption {
@@ -7365,13 +7365,14 @@ ul.clients-block li {
     left: 170px;
   }
   .ticker-container ul div.ticker-active {
+    padding-top:10px;
     top: 0;
   }
   .ticker-container ul div.not-active {
-    top: 30px;
+    top: 40px;
   }
   .ticker-container ul div.remove {
-    top: -30px;
+    top: -40px;
   }
 }
 /*
