csra-logo added

--- a/boilerplate/include/ourClients.html
+++ b/boilerplate/include/ourClients.html
@@ -2,6 +2,9 @@
 				<h2 class="section-heading clients-heading">OUR CLIENTS AND PARTNERS (PRIME/SUB ROLE)</h2>
 				<ul class="clients">
 					<li>
+						<a href="#"><img src="img/csra-logo.png" alt="logo"></a>
+					</li>
+					<li>
 						<a href="#"><img src="img/usda-fsa-logo.png" alt="logo"></a>
 					</li>
 					<li>
