Who do we serve changed to clients

--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -42,7 +42,7 @@
                               <li class="dropdown"><li><a href="certifications.html">CERTIFICATIONS</a></li>
                               <li><a href="contractVehicles.html">CONTRACTS</a></li>
                               <li><a href="solutions.html">SOLUTIONS</a></li>
-                              <li><a href="clients.html">WHO DO WE SERVE?</a></li>
+                              <li><a href="clients.html">CLIENTS</a></li>
                               <li><a href="careers.html">CAREERS</a></li>
                               <li><a href="contactUs.php">CONTACT US</a></li>
                           </ul>
