New graphics and security control pages added

--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -5,7 +5,7 @@
                           <span class="sr-only">Toggle Navigation</span>
                           <i class="fa fa-bars"></i>
                         </button>
-                        </button>
+
                         <a class="navbar-brand" href="index.html"><img src="img/attainx-logo.jpg" alt="AttainX Logo"/></a>
                     </div>
                     <div class="collapse navbar-collapse">
@@ -25,6 +25,8 @@
 
                                     <li><a href="programAndProjectManagement.html">PROJECT AND PROGRAM MANAGEMENT</a></li>
                                     <li><a href="agileSoftwareDevelopment.html">AGILE SOFTWARE DEVELOPMENT</a></li>
+                                    <li><a href="graphics.html">Graphics & Media Support</a></li>
+                                    <li><a href="securityControl.html">Security Control</a></li>
                                     <li><a href="devops.html">DEVOPS</a></li>
                                     <li><a href="enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
                                     <li><a href="cloud.html">CLOUD APPLICATONS AND MIGRATION</a></li>
