Change the menu items to upper case

--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -25,8 +25,8 @@
 
                                     <li><a href="programAndProjectManagement.html">PROJECT AND PROGRAM MANAGEMENT</a></li>
                                     <li><a href="agileSoftwareDevelopment.html">AGILE SOFTWARE DEVELOPMENT</a></li>
-                                    <li><a href="graphics.html">Graphics & Media Support</a></li>
-                                    <li><a href="securityControl.html">Security Control</a></li>
+                                    <li><a href="graphics.html">GRAPHICS & MEDIA SUPPORT</a></li>
+                                    <li><a href="securityControl.html">SECURITY CONTROL</a></li>
                                     <li><a href="devops.html">DEVOPS</a></li>
                                     <li><a href="enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
                                     <li><a href="cloud.html">CLOUD APPLICATONS AND MIGRATION</a></li>
